--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -45,7 +45,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.fragment:fragment-ktx:1.2.0"
+    implementation 'pub.devrel:easypermissions:1.1.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 }
