--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "com.nabinbhandari.android:permissions:3.8"
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
