--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,29 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.1-alpha'
+        classpath "org.jmailen.gradle:kotlinter-gradle:2.4.1"
     }
+
+
+
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
