--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,13 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.5"
     implementation "androidx.room:room-ktx:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.moshi:moshi:1.9.3'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
@@ -73,6 +75,6 @@ kotlinter {
     indentSize = 4
     reporters = ['checkstyle', 'plain']
     experimentalRules = false
-    disabledRules = []
+    disabledRules = ["no-wildcard-imports"]
     fileBatchSize = 30
 }
