--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,10 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
