--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".FGDApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,11 +23,7 @@
         android:fullBackupContent="@xml/backup_descriptor">
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCkZcvE_QrR-PCCpBP1g-LgrIOywhqSuAU" />
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
+            android:value="@string/google_maps_api_key" />
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name">
